[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = [ "full" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
chrono = "0.4.42"
tui = "0.19.0"
crossterm = "0.29.0"
argon2 = "0.5.3"
rand = "0.9.2"
password-hash = "0.5.0"
